Clear code; Fix ArrayLists; Optimize code